@@ -6,6 +6,8 @@
 -- Use CMAKE_CURRENT_SOURCE_DIR in CMake build to help nested use (bug 335).
 - mpg123:
 -- new network backend using external tools/libraries to also support HTTPS
+-- terminal control now also with audio from stdin (bug 338) via
+   /dev/tty or ctermid()
 -- remote control API v10 with "@P 3" as additonal message on track end
 -- also added PROGRESS command as opposite of SILENCE
 -- fix some verbosity, tweak help for --icy-interval
